Edited styles on web pages.

--- a/src/Styles/EventsPage.css
+++ b/src/Styles/EventsPage.css
@@ -20,18 +20,9 @@ body {
 }
 }
   
-  .hero {
-    text-align: center;
-    background: #ff37f2;
-    padding: 5rem 1rem;
-  }
-  
-  .past-events {
-    padding: 2rem;
-  }
-  
-  .past-events .events-gallery img {
-    width: 100%;
-    max-width: 300px;
-    margin: 0.5rem;
+  .h1 {
+  font-size: 2.5rem;
+  text-align: center;
+  font-family: "Bangers";
+  font-style: normal;
   }
