--- a/src/Styles/TeamPage.css
+++ b/src/Styles/TeamPage.css
@@ -73,3 +73,9 @@ body {
 .team-card:hover {
     transform: scale(1.05);
 }
+
+@media (min-width: 768px) {
+    main {
+      flex-direction: row;
+    }
+  }
