Changed Font and Background Color

--- a/src/Styles/EventsPage.css
+++ b/src/Styles/EventsPage.css
@@ -1,8 +1,8 @@
 body {
-  font-family: "Bangers";
+  font-family: 'Avengeance', sans-serif;
   margin: 0;
   height: 100vh;
-  background: linear-gradient(45deg, #ff69b4, #ffb6c1, #87cefa);
+  background: linear-gradient(45deg, #5c4033, #ffffff, #808080);
   background-size: 400% 400%;
   animation: gradientAnimation 10s ease infinite;
 }
