--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -37,7 +37,7 @@
 
 .card-body h1 {
   font-size: 2rem;
-  font-family: "Bangers", cursive;
+  font-family: 'Avengeance', cursive;
   margin-bottom: 1rem;
   color: #fff;
 }
