--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Avengeance';
+  src: url('/fonts/AvengeanceMightiestAvenger.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Avengeance', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: "Bangers";
