--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,6 +1,5 @@
 /* Bootstrap Icons */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css");
-
 /* Fonts */
 @font-face {
   font-family: 'Avengeance';
@@ -55,7 +54,7 @@
   position: absolute;
   height: 3px;
   width: 100%;
-  background-color: #493a3a;
+  background-color: #f50685;
   transition: all 0.3s ease-in-out;
   border-radius: 1px;
 }
@@ -145,13 +144,13 @@
 }
 
 .mainnav .nav-link:hover {
-  text-shadow: 0 2px 0 #493a3a; /* pink drop shadow only under text */
+  text-shadow: 0 2px 0 #f50685; /* pink drop shadow only under text */
   background: none;             /* no full-box background */
 }
 
 .navbar-nav .nav-link:hover {
   background: none !important;
-  text-shadow: 0 2px 0 #493a3a;
+  text-shadow: 0 2px 0 #f50685;
 }
 
 .navbar-nav .nav-link {
@@ -173,7 +172,7 @@
   bottom: 0.1em;
   width: 100%;
   height: 60%;
-  background-color: #493a3a;
+  background-color: #f50685;
   z-index: -1;
   transition: transform 0.3s ease-in-out;
   transform: scaleY(0);
@@ -231,7 +230,7 @@ body {
   line-height: var(--ar-body-line-height);
   color: var(--ar-body-color);
   text-align: var(--ar-body-text-align);
-  background: linear-gradient(45deg, #5c4033, #ffffff, #808080);
+  background: linear-gradient(45deg, #b08968, #d9c3a6, #808080);
   margin: 0;
   display: flex;
   flex-direction: column;
