--- a/src/Styles/TeamPage.css
+++ b/src/Styles/TeamPage.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Avengeance', sans-serif;
     height: 100vh; /* Ensures the gradient covers the full screen */
-    background: linear-gradient(45deg, #5c4033, #ffffff, #808080);
+    background: linear-gradient(45deg, #b08968, #d9c3a6, #808080);
     background-size: 400% 400%; /* Enlarges the background to allow smooth gradient animation */
     animation: gradientAnimation 10s ease infinite;
 }
