--- a/src/Styles/GalleryPage.css
+++ b/src/Styles/GalleryPage.css
@@ -53,7 +53,7 @@ body {
 .gallery-item img {
   width: 100%;
   height: auto;
-  border: 4px solid #f50685;
+  border: 4px solid #8B4513; /* Brown border */
   border-radius: 1rem;
   transition: transform 0.2s ease-in-out;
 }
