Added Automatic Event Flip Cards to Event Tab, Fixed format and background color issues.

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'SF Obliquities';
+  src: url('/fonts/SFObliquities.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   font-family: 'Avengeance', sans-serif;
 }
