Fixed Font for Homepage.

--- a/src/Styles/HomePage.css
+++ b/src/Styles/HomePage.css
@@ -38,7 +38,7 @@
 
 .card-body h1 {
   font-size: 2rem;
-  font-family: 'Avengeance', cursive;
+  font-family: 'Avengeance', sans-serif;
   margin-bottom: 1rem;
   color: #fff;
 }
